# cfm_telegram_bot

./: .gitignore  Makefile  READEME.md  bot.py  main.py  pyproject.toml  tgbot.py
common/: upload.py  utils.py
common/providers/: s3.py
models/: mgo_models.py
services/: keyboards.py  messages.py
src/: keyboards.py
