[tool.poetry]
name = "cfmbot"
version = "0.1.0"
description = "cloud file manager by telegram bot"
authors = ["nasiri-py <sinanasiri.py@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
pyyaml = "^6.0.1"
mongoengine = "^0.28.2"
aggify = "^0.3.8"
dynaconf = "^3.2.5"
watchdog = "^4.0.0"
boto3 = "^1.34.74"
minio = "^7.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
